hphp/hack/test/typecheck/expression_trees/nesting/vars/not_allowed.php
<?hh
<<file:__EnableUnstableFeatures('expression_trees')>>

function f(): void {
  ExampleDsl`${ExampleDsl`$x`}`;
}
